# api/docs/swagger.json
@@ -139,6 +139,38 @@
                 }
             }
         },
+        "/v1/get-workers-by-day/{date}": {
+            "get": {
+                "description": "This function gets all workers by day",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Worker-History"
+                ],
+                "summary": "Get all workers by day",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "date",
+                        "name": "date",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.WorkersByDayResp"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/get-workers-by-month/{date}": {
             "get": {
                 "description": "This function gets all workers by date",
@@ -171,8 +203,52 @@
                 }
             }
         },
+        "/v1/get-workers-by-two-date/{date}": {
+            "get": {
+                "description": "This function gets all workers by two date",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Worker-History"
+                ],
+                "summary": "Get all workers by two date",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "date1",
+                        "name": "date1",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "date2",
+                        "name": "date2",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/models.WorkersByTwoDateResp"
+                        }
+                    }
+                }
+            }
+        },
         "/v1/worker": {
             "post": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "Create worker",
                 "consumes": [
                     "application/json"
@@ -206,7 +282,12 @@
             }
         },
         "/v1/worker/update": {
-            "post": {
+            "put": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This finction updates worker by id",
                 "consumes": [
                     "application/json"
@@ -277,6 +358,11 @@
                 }
             },
             "delete": {
+                "security": [
+                    {
+                        "ApiKeyAuth": []
+                    }
+                ],
                 "description": "This finction deletes worker by id",
                 "consumes": [
                     "application/json"
@@ -331,6 +417,32 @@
                         "description": "OK",
                         "schema": {
                             "$ref": "#/definitions/models.AllWorkers"
+                        }
+                    }
+                }
+            }
+        },
+        "/v1/workers-top": {
+            "get": {
+                "description": "This function gets top workerers",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Worker"
+                ],
+                "summary": "Get top workers",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "type": "array",
+                            "items": {
+                                "$ref": "#/definitions/models.TopWorkers"
+                            }
                         }
                     }
                 }
@@ -437,9 +549,6 @@
             "properties": {
                 "id": {
                     "type": "string"
-                },
-                "time": {
-                    "type": "string"
                 }
             }
         },
@@ -451,6 +560,9 @@
                 },
                 "date": {
                     "type": "string"
+                },
+                "lateMinute": {
+                    "type": "number"
                 },
                 "leaveTime": {
                     "type": "string"
@@ -500,6 +612,52 @@
             "properties": {
                 "Message": {
                     "type": "string"
+                }
+            }
+        },
+        "models.TopTen": {
+            "type": "object",
+            "properties": {
+                "comeTime": {
+                    "type": "string"
+                },
+                "gender": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "image_url": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "position": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                },
+                "wdepartment": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.TopWorkers": {
+            "type": "object",
+            "properties": {
+                "topBad": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TopTen"
+                    }
+                },
+                "topBest": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.TopTen"
+                    }
                 }
             }
         },
@@ -611,6 +769,40 @@
                 }
             }
         },
+        "models.WorkersByDay": {
+            "type": "object",
+            "properties": {
+                "come_time": {
+                    "type": "string"
+                },
+                "id": {
+                    "type": "string"
+                },
+                "img": {
+                    "type": "string"
+                },
+                "leave_time": {
+                    "type": "string"
+                },
+                "name": {
+                    "type": "string"
+                },
+                "surname": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.WorkersByDayResp": {
+            "type": "object",
+            "properties": {
+                "workers_resp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.WorkersByDay"
+                    }
+                }
+            }
+        },
         "models.WorkersByMonth": {
             "type": "object",
             "properties": {
@@ -641,6 +833,17 @@
             }
         },
         "models.WorkersByMonthResp": {
+            "type": "object",
+            "properties": {
+                "workers_resp": {
+                    "type": "array",
+                    "items": {
+                        "$ref": "#/definitions/models.WorkersByMonth"
+                    }
+                }
+            }
+        },
+        "models.WorkersByTwoDateResp": {
             "type": "object",
             "properties": {
                 "workers_resp": {
