# api/models/w_history.go
@@ -4,16 +4,21 @@ type WorkersByMonthResp struct {
 	WorkersResp []WorkersByMonth `json:"workers_resp"`
 }
 
-type WorkersResp struct {
-	Id          string `json:"id"`
-	Img_url     string `json:"img"`
-	Name        string `json:"name"`
-	Surname     string `json:"surname"`
-	AverageTime string `json:"average_time"`
-	// Department  string `json:"department"`
-	// Gender      string `json:"gender"`
-	// ComeTime    string `json:"come_time"`
-	// LeaveTime   string `json:"leave_time"`
+type WorkersByDayResp struct {
+	WorkersResp []WorkersByDay `json:"workers_resp"`
+}
+
+type WorkersByTwoDateResp struct {
+	WorkersResp []WorkersByMonth `json:"workers_resp"`
+}
+
+type WorkersByDay struct {
+	Id        string `json:"id"`
+	Img_url   string `json:"img"`
+	Name      string `json:"name"`
+	Surname   string `json:"surname"`
+	ComeTime  string `json:"come_time"`
+	LeaveTime string `json:"leave_time"`
 }
 
 type WorkersByMonth struct {
